dadjokes-helm/templates/service1.yml
apiVersion: v1
kind: Service
metadata:
  name: dadjokes-service
  namespace: sre-techtask
spec:
  selector:
    app: dadjokes
  #type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8100
