dadjokes-helm/templates/ingress1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dadjokes-ingress
  namespace: sre-techtask
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dadjokes.local.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dadjokes-service
            port:
              number: 80
